--- a/three/src/components/card/card.module.css
+++ b/three/src/components/card/card.module.css
@@ -9,6 +9,7 @@ h2 {
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: grey;
 }
 p {
     font-size: 22px;
@@ -22,11 +23,11 @@ p {
     color: white;
     cursor: pointer;
 }
-.grey {
+.white {
     width: 250px;
     padding: 15px;
     border: 1px solid black;
-    background-color: grey;
+    background-color: white;
     border-radius: 8px;
     display: flex;
     flex-direction: column;
